# mine-jepa

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  download_demos.bat  download_obtain_demos.bat  play_bc.bat  play_bc_cnn.bat  play_craft.bat  play_craft_test.bat  play_ebwm.bat  play_multi.bat  play_parallel.bat  prepare_demos.bat  pyproject.toml  run.bat  train_demos.bat
.claude/: settings.json
.claude/commands/: explain-jepa.md  gate-check.md  phase-status.md
configs/: collect.yaml  collect_minerl.yaml  collect_minerl_goal.yaml  minerl_actions.yaml  minerl_actions_obtain.yaml  play.yaml  play_bc.yaml  play_bc_cnn.yaml  play_craft.yaml  play_craft_test.yaml  play_ebwm.yaml  play_explore.yaml  play_minerl.yaml  train_bc.yaml  train_bc_cnn.yaml  train_craft_wm.yaml  train_craft_wm_v4.yaml  train_curiosity.yaml  train_eb_jepa.yaml  train_encoder.yaml  train_encoder_demos.yaml  train_encoder_minerl.yaml  train_wm.yaml  train_wm_demos.yaml  train_wm_minerl.yaml
docs/: 01_jepa.md  02_setup.md  03_representation_collapse.md  04_world_model.md  05_planning.md  06_minecraft_port.md  07_cua_landscape_june2026.md  08_crafting.md  09_curiosity_coldstart.md
scripts/: collect.py  collect_goal_directed.py  collect_minerl_multi.py  eval_wm.py  play.py  play_craft.py  play_ebwm.py  play_minerl_multi.py  play_parallel.py  prepare_demos.py  prepare_demos_obtain.py  probe.py  smoke_eb_jepa.py  smoke_multiagent.py  train_bc.py  train_bc_cnn.py  train_craft_wm.py  train_craft_wm_v4.py  train_curiosity.py  train_eb_jepa.py  train_encoder.py  train_wm.py
(+30 files in other folders)
